--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^1.10.0",
     "jwt-decode": "^4.0.0",
+    "mark": "^0.10.0",
+    "marked": "^16.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.0"
